--- a/Home/about.css
+++ b/Home/about.css
@@ -1,65 +1,68 @@
 * {
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
+    box-sizing: border-box;
 }
 
 body {
-    display:flex;
-    min-height:100vh;
-    /* background-color: #ddd; */
-    flex-direction:column;
-     align-items:center; /*juz sie elementy nie rozciagaja zajmuja tyle ile potrzebuja, sa ograniczone */
-    font-family:sans-serif;
+    margin: 0;
+}
+
+.container {
+    max-width:1500px;
+}
+
+a {
+    font-size: 20px;
     color:black;
-    font-size:20px;
+    letter-spacing: 2px;
+    text-decoration:none;
+    padding: 30px 5px;
+    display:inline-block;
+    width:100%;
+    text-align:left;
+    transition:.3s;
 }
-
-
-
-nav {
-    
-     align-self:stretch;/* nav się bedzie rozciagal */
-    /* background-color: aqua; */
-     padding:20px 0;/*zamiast padding mozemy dac flex basis bo jest column czyli dotyczy osi y */
-   
-  
- } 
-
- ul {
-    list-style-type: none;
-}
-
-li {
-    display:inline;
-}
-
-
- a {
-      font-size:20px;
-    color:black;
-    padding: 5px 45px;
-     text-decoration-line: none;
-     float:right;
-     cursor:pointer;
-     transition: .3s;
-     /* background-color:rgb(204, 44, 71); */
- }
 
 a:hover {
 text-decoration:underline;
 }
 
+.flex-nav ul {
+list-style: none;
+margin:0;
+padding: 0;
+display:flex;
+}
 
-.orange {
-    margin-left: 25px;
-    font-size: 35px;
+.flex-nav li {
+    flex:1;
+}
+
+
+.flex-nav .orange {
+    padding: 20px 25px;
+    width:100%;
     letter-spacing: 2px;
     text-transform: uppercase;
-    font-size:25px;
+    font-size:30px;
+    flex:4;
    
 }
 
+@media all and (max-width:800px) {
+   
+    .flex-nav ul {
+    flex-direction:column;
+    }
+
+}
+
+
+@media all and (max-width:300px) {
+.flex-nav li {
+    flex: 1 1 100%;
+}
+}
+   
 
 section {
      display:flex;/* musimy powiedziec section zeby jego dzieci main i aside tez byly elastyczne dlatego flex */
