--- a/Home/whereTobuy.css
+++ b/Home/whereTobuy.css
@@ -1,41 +1,24 @@
-section, footer {
-    display:block;
+* {
+    box-sizing: border-box;
 }
 
-
-nav {
-    width: 100%;
-    height:10vh;
-    line-height:8vh;
-    /* background-color: red;  */
-    top: 0;
-    left: 0;
-    z-index: 1;
-
-    
-   
+body {
+    margin:0;
 }
-  
  
- 
-
-ul {
-   list-style-type: none;
-}
-
-li {
-   display:inline;
-}
-
+ .container {
+     max-width:1500px;
+ }
 
 a {
-    
-
-   font-size:20px;
+ font-size:20px;
    color:black;
-   padding: 5px 45px;
+   padding: 30px 5px;
+   letter-spacing: 2px;
     text-decoration-line: none;
-    float:right;
+    display:inline-block;
+    width:100%;
+    text-align:left;
     cursor:pointer;
     transition: .3s;
    
@@ -44,16 +27,47 @@ a {
 a:hover {
 text-decoration:underline;
 }
-.orange {
-   margin-left: 25px;
-   font-size: 30px;
+
+.flex-nav ul {
+    list-style: none;
+    margin:0;
+    padding: 0;
+    display:flex;
+    }
+
+.flex-nav li {
+    flex:1;
+}
+
+
+.flex-nav .orange {
+   padding: 20px 25px;
+   font-size :30px;
    letter-spacing: 2px;
    text-transform: uppercase;
+   width:100%;
    font-size:25px;
+   flex:4;
   
 }
 
-h1 {
+
+@media all and (max-width:800px) {
+   
+    .flex-nav ul {
+    flex-direction:column;
+    }
+
+}
+
+
+@media all and (max-width:300px) {
+.flex-nav li {
+    flex: 1 1 100%;
+}
+}
+
+/* h1 {
     position: absolute;
     right: 180px;
     font-size: 40px;
@@ -105,7 +119,7 @@ h1 {
 .organic{
     position:relative;
     bottom: 0px;
-}
+} */
 
 
 
