--- a/Home/mainpage.css
+++ b/Home/mainpage.css
@@ -12,6 +12,10 @@ body {
     
  .container {
  max-width: 1500px;
+ display: flex;
+ flex-direction:column;
+ min-height:100vh;
+ background-color: aliceblue;
    }
 
 
@@ -36,6 +40,7 @@ body {
        margin:0;
        padding:0;
        display:flex;
+      
    }
 
    .flex-nav li {
