--- a/Home/mainpage.css
+++ b/Home/mainpage.css
@@ -71,6 +71,21 @@ body {
 }
 }
 
+section {
+    display:flex;
+    flex-direction: column;
+    justify-content:flex-start;
+   align-items:flex-end;
+    
+}
+
+
+/* 
+.fresh {
+    
+    justify-content: flex-end;
+} */
+
 
 
 /* article { */
