--- a/Home/whereTobuy.css
+++ b/Home/whereTobuy.css
@@ -8,6 +8,7 @@ body {
  
  .container {
      max-width:1500px;
+ 
  }
 
 a {
@@ -66,6 +67,45 @@ text-decoration:underline;
     flex: 1 1 100%;
 }
 }
+
+section {
+    display:flex;
+    flex-wrap:wrap;
+}
+
+.paragraph span {
+    display:table;
+}
+
+.store span {
+    display: table;
+}
+
+
+h1 {
+ 
+ font-size:45px;
+ color:gray;
+    
+}
+
+.paragraph {
+    font-size: 1.3em;
+    color:gray;
+    line-height: 200%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* h1 {
     position: absolute;
