--- a/Home/about.css
+++ b/Home/about.css
@@ -69,13 +69,12 @@ section {
      flex-direction:row; /*jest to ustawienie domyslne i takie chcemy zostawic */
     flex-grow:1;
     align-items:stretch;  /*wartosc domyslna dlatego main i aside rosna!!! */
-    /* background-color:rgb(180, 84, 84); */
-    width:100%;
-    /* max-width:1200px; */
+     width:100%;
+   
 }
 
  main {
-    /* background-color: rgb(245, 190, 190); */
+    background-color: rgb(245, 190, 190);
     flex-grow:1;
     flex-basis:60%;
 }
@@ -89,7 +88,7 @@ section {
     color: gray;
     font-weight:300;
     text-transform:uppercase;
-    /* background-color:yellow; */
+    background-color:yellow;
     margin-bottom:5px;
 }
 
@@ -100,11 +99,14 @@ section {
     /* width:600px; */
     font-size: 1.3em;
     color:gray;
-    /* background-color:blue; */
+    background-color:blue;
     padding-right:50px;
     margin:5px 50px 5px 0;
     flex-basis:50%;
-    
+}
+
+.paragraph span {
+    display: table;
 }
 
 aside {
