--- a/Home/mainpage.css
+++ b/Home/mainpage.css
@@ -11,11 +11,12 @@ body {
 } */
     
  .container {
- max-width: 1500px;
- display: flex;
- flex-direction:column;
- min-height:200vh;
- background-color: aliceblue;
+     margin: 0 auto;
+    width: 1024px;
+    display: flex;
+    flex-direction:column;
+    background-color: rgb(207, 228, 247);
+ 
    }
 
    nav {
@@ -95,8 +96,10 @@ body {
     justify-content:center;
     align-items:center;
     height:400px;
+   
   
 }
+
 
 
 h3 {
@@ -124,10 +127,19 @@ p {
    flex-direction:row-reverse; 
    background-color: violet;
    height:400px;
-   justify-content:center;
-   align-items:center;
+align-items:center;
+}
 
-   }
+.home-grown {
+display: flex;
+flex-direction:column;
+justify-content:flex-end;
+align-items:center;
+
+
+}
+
+
 
 h2 {
     background-color: seagreen;
@@ -236,6 +248,7 @@ button {
 footer {
     display:flex;
     height:100px;
+    align-self:stretch;
     
 }
 
